@@ -2,6 +2,13 @@ THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.
 SUPER MINOR REVISION NUMBERS WON'T SHOW UP IN GITHUB BUT IT'LL HELP
 ME ORGANIZE WHEN I MADE A SET OF FIXES
 
+UAP-2.1.0
+ - ADD: support for custom regexes.json files (via @pravindahal)
+ - FIX: formerly private vars/functions are now protected (via @pravindahal)
+ - FIX: command line tool gets 'pretty' option for PHP 5.4 users (via @skyzyx)
+ - FIX: refactored the regexes.yaml test suite
+ - THX: thanks to @pravindahal and @skyzyx for the pull requests
+ 
 UAP-2.0.1
  - FIX: renamed uaParser, osParser, & deviceParser to uaParse, osParse, & deviceParse to address a bug with uaParser being recognized as the contruct function for the overall lib
  - FIX: updated the test lib so that device failures are properly formatted
